# ChangeLog for dev-ml/ocaml-fileutils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-fileutils/ChangeLog,v 1.12 2013/07/22 12:31:33 aballier Exp $

  22 Jul 2013; Alexis Ballier <aballier@gentoo.org>
  -ocaml-fileutils-0.4.4.ebuild:
  remove old

*ocaml-fileutils-0.4.5 (14 Jun 2013)

  14 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  +ocaml-fileutils-0.4.5.ebuild:
  version bump

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  03 Mar 2013; Alexis Ballier <aballier@gentoo.org>
  ocaml-fileutils-0.4.4.ebuild:
  eapi5 and define subslot

  09 Jul 2012; Ulrich Müller <ulm@gentoo.org> ocaml-fileutils-0.4.4.ebuild:
  Update LICENSE, bug 425140.

  04 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  -ocaml-fileutils-0.4.3.ebuild:
  remove old

  04 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  ocaml-fileutils-0.4.4.ebuild:
  ounit is not only for tests, by Willy WOLFF, bug #415327

*ocaml-fileutils-0.4.4 (19 Jun 2012)

  19 Jun 2012; Alexis Ballier <aballier@gentoo.org>
  +ocaml-fileutils-0.4.4.ebuild:
  version bump

  18 May 2012; Alexis Ballier <aballier@gentoo.org>
  -ocaml-fileutils-0.4.2.ebuild:
  remove old

*ocaml-fileutils-0.4.3 (05 May 2012)

  05 May 2012; Alexis Ballier <aballier@gentoo.org>
  +ocaml-fileutils-0.4.3.ebuild:
  version bump

  15 Mar 2011; Alexis Ballier <aballier@gentoo.org>
  ocaml-fileutils-0.4.2.ebuild:
  findlib dep is added by the eclass

*ocaml-fileutils-0.4.2 (15 Mar 2011)

  15 Mar 2011; Alexis Ballier <aballier@gentoo.org>
  +ocaml-fileutils-0.4.2.ebuild, +metadata.xml:
  Initial import, ebuild by Vladimir Ivanov, bug #355755, with modifications
  and simplifications by me