@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/ocaml-gettext
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-gettext/ChangeLog,v 1.3 2013/08/19 13:36:15 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-gettext/ChangeLog,v 1.4 2013/08/24 13:19:29 maekke Exp $
+
+  24 Aug 2013; Markus Meier <maekke@gentoo.org> ocaml-gettext-0.3.4.ebuild:
+  add ~x86, bug #462360
 
   19 Aug 2013; Alexis Ballier <aballier@gentoo.org> ocaml-gettext-0.3.4.ebuild:
   eapi5, define subslot and add := dep on ocaml packages
