@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/ocaml-fileutils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-fileutils/ChangeLog,v 1.12 2013/07/22 12:31:33 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-fileutils/ChangeLog,v 1.13 2013/08/24 13:18:41 maekke Exp $
+
+  24 Aug 2013; Markus Meier <maekke@gentoo.org> ocaml-fileutils-0.4.5.ebuild:
+  add ~x86, bug #462360
 
   22 Jul 2013; Alexis Ballier <aballier@gentoo.org>
   -ocaml-fileutils-0.4.4.ebuild:
